<resources>
    <string name="app_name">CsP</string>
    <string name="logo">MOVE-It</string>
    <string name="login">LOGIN</string>
    <string name="fullName">Enter Full Name</string>
    <string name="email">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="register">Sign Up!</string>
    <string name="phone">Enter Phone Number</string>
    <string name="welcome">Welcome User !</string>
    <string name="regtwo">Already a user? Login here!</string>
    <string name="logout">LOGOUT</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_key" translatable="false">AIzaSyCfkFCcF9zuKeQ-11FNmsv7EGdDP5GvMzQ</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>